--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knevari</title>
+    <meta
+      name="description"
+      content="Web developer living in Brazil, current lead developer at JR Studio"
+    />
+    <meta name="author" content="Mateus 'Knevari' Souza" />
+    <title>Knevari - Web Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
