chore: self host fonts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,12 +10,6 @@
     />
     <meta name="author" content="Mateus 'Knevari' Souza" />
     <title>Knevari - Web Developer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div id="trailer"></div>
