--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Web developer living in Brazil, current lead developer at JR Studio"
     />
+    <meta property="og:title" content="Knevari - Web Developer" />
+    <meta property="og:site_name" content="Knevari - Portfolio" />
+    <meta property="og:image" content="/public/logo-color.svg" />
+    <meta property="og:type" content="website" />
     <meta name="author" content="Mateus 'Knevari' Souza" />
     <title>Knevari - Web Developer</title>
   </head>
   <body>
-    <div id="trailer"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
