--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Knevari - Web Developer</title>
   </head>
   <body>
+    <div id="trailer"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
