chore: update logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta property="og:title" content="Knevari - Web Developer" />
     <meta property="og:site_name" content="Knevari - Portfolio" />
-    <meta property="og:image" content="/logo-color.svg" />
+    <meta property="og:image" content="/logo/logo-color.svg" />
     <meta property="og:type" content="website" />
     <meta name="author" content="Mateus 'Knevari' Souza" />
     <title>Knevari - Web Developer</title>
