perf: remove forced rerender when my-stack enters viewport

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     />
     <meta property="og:title" content="Knevari - Web Developer" />
     <meta property="og:site_name" content="Knevari - Portfolio" />
-    <meta property="og:image" content="/logo/logo-color.svg" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dvfpvjwre/image/upload/v1700596408/portfolio/png/logo-color_r0vch9.png"
+    />
     <meta property="og:type" content="website" />
     <meta name="author" content="Mateus 'Knevari' Souza" />
     <title>Knevari - Web Developer</title>
