feat: enhance interactivity with magnetic buttons and update LinkedIn link

--- a/public/cv.html
+++ b/public/cv.html
@@ -286,7 +286,7 @@
             <span>•</span>
             <a href="https://github.com/Knevari">GitHub/Knevari</a>
             <span>•</span>
-            <a href="#">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/knevari/">LinkedIn/knevari</a>
             <span>•</span>
             <span>Brazil (Remote)</span>
         </div>
